--- a/ExpenseTracker/appsettings.json
+++ b/ExpenseTracker/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ExpenseTrackerDB;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "Secret": "hisIsMyVeryStrongSuperSecretKey12345!",
+    "Issuer": "ExpenseTrackerAPI",
+    "Audience": "ExpenseTrackerUsers",
+    "ExpirationMinutes": 60
   }
 }
